2004-09-06 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* server-specified prefix now sent encapsulated in auth packet
	* last release until I have more time to continue working on SUMI

2004-09-04 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* password and local address now required for running rawproxd
	* maximum retries default set to 3 (changed from 5)
	* server no-ack timeout set to rwinsz*3 (from rwinsz*2),
	  works better on laggy IRC servers
	* broadcast support added to rawproxd

2004-09-03 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.5
	* rawproxd allows a password to connect, making it more secure

2004-09-02 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* rawproxd.c working, raw proxy support added to sumiserv
	  (works on a Linksys WRT54GS router!)
	* rawproxd.cpp obsoleted due to new protocol format
	* .lost suffix changed to .sumi
	* Resuming seems to finally work correctly now
	* Fixed 100% CPU + excess flood bug involving lost packets
	  (found by microbrew - thanks)
	* Fixed overestimated client timeout, saves bandwidth
	* sumigetw explicitedly aborts transfers when closing instead of
	  waiting for them to time out on the server

2004-08-31 Dan Weber <dan@mirrorlynx.com>
	* Rewrote strings.txt in strings.texi,  I want to start a
	  process of rewriting documentation in texinfo

2004-08-31 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* ChangeLog converted to GNU style, old version in ChangeLog.old

2004-08-29 Dan Weber <dan@mirrorlynx.com>
	* rawproxd.cpp (NEW):  Added rawproxd.cpp.  This is a new
	implementation of rawproxd that works.
	* ChangeLog (NEW): Finally a GNU ChangeLog format.
	* ChangeLog.old (OLD): move of the old changelog.
	* rawproxd (REBUILD): rebuilt rawproxd from rawproxd.cpp

2004-08-25 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.4
	* add abort to sumiget, sumigetw, and sumiserv (right-click->Abort)
	* fix duplicate packets causing progress >100%
	* fix dl_dir format string