@@ -13,7 +13,7 @@
              'size': 60241920L},
             {'desc': '16000-byte Test',
              'fn': 'lptest',
-             'gets': 99,
+             'gets': 105,
              'hsize': '15k',
              'size': 16000L},
             {'desc': 'ONE MEG TEST',
@@ -23,7 +23,7 @@
              'size': 1048576L},
             {'desc': '\x02Five Megabytes\x02',
              'fn': '5mb',
-             'gets': 10,
+             'gets': 12,
              'hsize': '5.0M',
              'size': 5242880L},
             {'desc': 'Red_Martian-Glasses_Cannot_Go_To_The_Puzzle-2003-128',
@@ -35,7 +35,7 @@
  'irc_chans': {'#sumi': 'anon'},
  'irc_nick': 'sumi-00',
  'irc_port': 6667,
- 'irc_server': 'irc.zerolimit.net',
+ 'irc_server': 'irc2.liquidirc.com',
  'otpdir': '/home/jeff/p2p/sumi/otp/',
  'our_bandwidth': 256000,
  'sleep_interval': 300,
